...
    StandardScreen(
        navController = navController,
        title = "Trips",
        bottomBarColor = "trip"
    ) {

        //Start new trip
        Card(
            modifier = Modifier
                .fillMaxWidth()
                .padding(horizontal = 16.dp),
            colors = CardDefaults.cardColors(containerColor = Color(0xFFEEEEEE))
        ){
...
                        fuelValue,
                    )
                }
            },
                modifier = Modifier.testTag("startTripConfirmButton")
            ) {
                Text("Start")
            }
        },
        dismissButton = {
            TextButton(onClick = onDismiss) {
                Text("Cancel")
            }
...
