...
        verticalAlignment = Alignment.CenterVertically,
        horizontalArrangement = Arrangement.SpaceBetween
    ){
        //left button
        IconButton(
            onClick = onLeftClick,
            modifier = Modifier.testTag("topBarLeftButton")
        ) {
            Icon(
                imageVector = leftIcon,
                contentDescription = "Navigation action",
                tint = MaterialTheme.colorScheme.onBackground
            )
...
